[package]
name = "screen-locker"
version = "0.1.0"
edition = "2021"
authors = ["Louis Beaumont"]
description = "Cross-platform screen locker CLI that keeps apps running and prevents sleep"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
ctrlc = "3.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Power",
] }
