[package]
name = "agent-lock"
version = "0.1.0"
edition = "2021"
authors = ["Louis Beaumont"]
description = "Lock screen with PIN while keeping AI agents and background apps running"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
ctrlc = "3.4"
global-hotkey = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
] }
